--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -12,22 +12,22 @@
 				<img alt="The Standard Ebooks logo" src="../images/logo.svg" epub:type="z3998:publisher-logo se:color-depth.black-on-transparent"/>
 			</header>
 			<p><i epub:type="se:name.publication.book">Mrs. Dalloway</i><br/>
-			was published in YEAR by<br/>
+			was published in 1925 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Virginia_Woolf">Virginia Woolf</a>.</p>
 			<p>This ebook was produced for the<br/>
 			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
-			and is based on a transcription produced in PG_YEAR by<br/>
-			<b class="name">TRANSCRIBER_1</b>, <b class="name">TRANSCRIBER_2</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
+			<a href="https://astart.ca"><abbr class="name">B.</abbr> Timothy Keith</a> and <a href="https://readingwithapencil.com/"><abbr class="name">L. A.</abbr> Vermeer</a>,<br/>
+			and is based on a transcription produced in 2002 by<br/>
+			<b class="name">Don Lainson</b><br/>
 			for<br/>
-			<a href="PG_URL">Project Gutenberg</a><br/>
+			<a href="http://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans available at the<br/>
-			<a href="IA_URL">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/dli.ernet.16394">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
-			<i epub:type="se:name.visual-art.painting">PAINTING</i>,<br/>
-			a painting completed in YEAR by<br/>
-			<a href="ARTIST_WIKI_URL">ARTIST</a>.<br/>
+			<i epub:type="se:name.visual-art.painting">Portrait of a Woman</i>,<br/>
+			a painting completed between 1900 and 1922 by<br/>
+			<a href="https://en.wikipedia.org/wiki/Isaac_Isra%C3%ABls">Isaac Israëls</a>.<br/>
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
