--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -23,7 +23,7 @@
 			for<br/>
 			<a href="http://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans available at the<br/>
-			<a href="https://archive.org/details/dli.ernet.16394">Internet Archive</a>.</p>
+			<a href="https://archive.org/details/in.ernet.dli.2015.509292">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Portrait of a Woman</i>,<br/>
 			a painting completed between 1900 and 1922 by<br/>
