--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -14,8 +14,8 @@
 			<p><i epub:type="se:name.publication.book"><abbr>Mrs.</abbr> Dalloway</i><br/>
 			was published in 1925 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Virginia_Woolf">Virginia Woolf</a>.</p>
-			<p>This ebook was produced for the<br/>
-			<a href="https://standardebooks.org">Standard Ebooks project</a><br/>
+			<p>This ebook was produced for<br/>
+			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
 			<a href="https://astart.ca"><abbr class="name">B.</abbr> Timothy Keith</a> and <a href="https://readingwithapencil.com/"><abbr class="name">L. A.</abbr> Vermeer</a>,<br/>
 			and is based on a transcription produced in 2002 by<br/>
