--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,9 +17,9 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://astart.ca"><abbr class="name">B.</abbr> Timothy Keith</a> and <a href="https://readingwithapencil.com/"><abbr class="name">L. A.</abbr> Vermeer</a>,<br/>
+			<a href="https://astart.ca"><abbr epub:type="z3998:given-name">B.</abbr> Timothy Keith</a> and <a href="https://readingwithapencil.com/"><abbr epub:type="z3998:given-name">L. A.</abbr> Vermeer</a>,<br/>
 			and is based on a transcription produced in 2002 by<br/>
-			<b class="name">Don Lainson</b><br/>
+			<b epub:type="z3998:personal-name">Don Lainson</b><br/>
 			for<br/>
 			<a href="http://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans available at the<br/>
