Update URLs to HTTPS

--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -21,7 +21,7 @@
 			and is based on a transcription produced in 2002 by<br/>
 			<b epub:type="z3998:personal-name">Don Lainson</b><br/>
 			for<br/>
-			<a href="http://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
+			<a href="https://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans available at the<br/>
 			<a href="https://archive.org/details/in.ernet.dli.2015.509292">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
