--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -22,7 +22,7 @@
 			<b epub:type="z3998:personal-name">Don Lainson</b><br/>
 			for<br/>
 			<a href="https://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
-			and on digital scans available at the<br/>
+			and on digital scans from the<br/>
 			<a href="https://archive.org/details/in.ernet.dli.2015.509292">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
 			<i epub:type="se:name.visual-art.painting">Portrait of a Woman</i>,<br/>
