--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -11,7 +11,7 @@
 				<h2 epub:type="title">Colophon</h2>
 				<img alt="The Standard Ebooks logo." src="../images/logo.svg" epub:type="z3998:publisher-logo se:image.color-depth.black-on-transparent"/>
 			</header>
-			<p><i epub:type="se:name.publication.book"><abbr>Mrs.</abbr> Dalloway</i><br/>
+			<p><i epub:type="se:name.publication.book"><abbr epub:type="z3998:name-title">Mrs.</abbr> Dalloway</i><br/>
 			was published in 1925 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Virginia_Woolf">Virginia Woolf</a>.</p>
 			<p>This ebook was produced for<br/>
