--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -15,13 +15,13 @@
 			was published in 1925 by<br/>
 			<a href="https://en.wikipedia.org/wiki/Virginia_Woolf">Virginia Woolf</a>.</p>
 			<p>This ebook was produced for<br/>
-			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
+			<a href="https://standardebooks.org/">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="https://astart.ca"><abbr epub:type="z3998:given-name">B.</abbr> Timothy Keith</a> and <a href="https://readingwithapencil.com/"><abbr epub:type="z3998:given-name">L. A.</abbr> Vermeer</a>,<br/>
+			<a href="https://astart.ca/"><abbr epub:type="z3998:given-name">B.</abbr> Timothy Keith</a> and <a href="https://readingwithapencil.com/"><abbr epub:type="z3998:given-name">L. A.</abbr> Vermeer</a>,<br/>
 			and is based on a transcription produced in 2002 by<br/>
 			<b epub:type="z3998:personal-name">Don Lainson</b><br/>
 			for<br/>
-			<a href="https://gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
+			<a href="https://www.gutenberg.net.au/ebooks02/0200991h.html">Project Gutenberg Australia</a><br/>
 			and on digital scans from the<br/>
 			<a href="https://archive.org/details/in.ernet.dli.2015.509292">Internet Archive</a>.</p>
 			<p>The cover page is adapted from<br/>
@@ -31,12 +31,12 @@
 			The cover and title pages feature the<br/>
 			<b epub:type="se:name.visual-art.typeface">League Spartan</b> and <b epub:type="se:name.visual-art.typeface">Sorts Mill Goudy</b><br/>
 			typefaces created in 2014 and 2009 by<br/>
-			<a href="https://www.theleagueofmoveabletype.com">The League of Moveable Type</a>.</p>
+			<a href="https://www.theleagueofmoveabletype.com/">The League of Moveable Type</a>.</p>
 			<p>The first edition of this ebook was released on<br/>
 			<b>January 25, 2021, 11:45 <abbr class="eoc">p.m.</abbr></b><br/>
 			You can check for updates to this ebook, view its revision history, or download it for different ereading systems at<br/>
 			<a href="https://standardebooks.org/ebooks/virginia-woolf/mrs-dalloway">standardebooks.org/ebooks/virginia-woolf/mrs-dalloway</a>.</p>
-			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org">standardebooks.org</a>.</p>
+			<p>The volunteer-driven Standard Ebooks project relies on readers like you to submit typos, corrections, and other improvements. Anyone can contribute at <a href="https://standardebooks.org/">standardebooks.org</a>.</p>
 		</section>
 	</body>
 </html>
